--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   "devDependencies": {
     "node-sass": "^8.0.0",
     "nodemon": "^2.0.20"
+  },
+  "dependencies": {
+    "sweetalert2": "^11.7.1",
+    "toastify-js": "^1.12.0"
   }
 }
